@@ -81,7 +81,7 @@ The Toy Store App requires [Apache Maven](https://maven.apache.org/) (you can sk
 ##### **Run**
 
 ```shell
-% APP_ENVIRONMENT="local" MAVEN_OPTS="--enable-preview --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED" mvn -e exec:java -Dexec.mainClass="com.soklet.example.App"
+% APP_ENVIRONMENT="local" MAVEN_OPTS="--add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED" mvn -e exec:java -Dexec.mainClass="com.soklet.example.App"
 ```
 
 ### API Demonstration
